logo fix on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,10 @@ header .logo {
   margin: 1.5rem 0;
   position: relative;
 }
+
 .logo-img {
   width: 160px;
-  height: fit-content;
+  aspect-ratio: 1/2;
   object-fit: cover;
 }
 
